--- a/Tugas_Sister.html
+++ b/Tugas_Sister.html
@@ -8,9 +8,9 @@
 
 <body>
 
-Nama : Maulana Akbar Kusuma<br>
-NPM : 41155050180007<br>
-Kelas : INF A1<br>
+Nama : Rizki Riswandi<br>
+NPM : 41155050180010<br>
+Kelas : INF-A1<br>
 
 </body>
 
